@@ -230,3 +230,15 @@ unsigned int squeue_size(squeue_t *q)
 		return 0;
 	return pqueue_size(q);
 }
+
+int squeue_evt_when_is_after(squeue_event *evt, struct timeval *reftime) {
+	if(!evt) return -1;
+
+	if((reftime->tv_sec > evt->when.tv_sec) ||
+			((reftime->tv_sec == evt->when.tv_sec) &&
+			(reftime->tv_usec > evt->when.tv_usec))) {
+		return 1;
+	}
+	return 0;
+
+}
